src/objects/Outcomes_Application_Commissioner__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Outcomes Application Commissioners</relationshipLabel>
        <relationshipName>Outcomes_Application_Commissioners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commissioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>OutComes_Application_Commissioner2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_as_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked as Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Outcomes Application Commissioner</label>
    <nameField>
        <label>Outcome Application Commissioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes Application Commissioners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>